--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,8 @@
-application.args=-gui LearningRecommender:agents.Receiver
+application.args=-gui busqueda:proyecto_jade.Agente_Busqueda;deteccion:proyecto_jade.Agente_Deteccion
 compile.on.save=true
 do.depend=false
 do.jar=true
+file.reference.jade.jar=C:\\Users\\renat\\OneDrive - Universidad T\u00e9cnica Particular de Loja - UTPL\\Documentos\\NetBeansProjects\\ProyectoIA_Grupo3\\librerias_utilizadas\\jade.jar
 javac.debug=true
 javadoc.preview=true
 user.properties.file=C:\\Users\\renat\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
